[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbo = { version = "0.3.4", package = "turbo-genesis-sdk",  features = ["solana"]}
tryings = { path = "/Users/tajer/testing/tryings/programs/tryings" }


[lib]
crate-type = ["cdylib"]

[patch.crates-io]
cc = { git = "https://github.com/jozanza/cc-rs.git", branch = "wasm-patch" }
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  